<?xml version="1.0"?>
<package>
  <name>tele_board</name>
  <version>2.0.0</version>
  <description>Generic keyboard teleop for HoverBoard robots.</description>

  <maintainer email="mohamed4data@gmail.com">Mohamed Hanon</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
